# qt-libtorch-cmake

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
